correction lien génération pdf

--- a/dist-pdf/markdownForPdf/le-bilan-et-la-reeducation-vocale-le-timbre-en-question/contrat-formation-salarie.html
+++ b/dist-pdf/markdownForPdf/le-bilan-et-la-reeducation-vocale-le-timbre-en-question/contrat-formation-salarie.html
@@ -33,7 +33,7 @@
         : Action d’acquisition, d’entretien ou de perfectionnement des connaissances. Elle a pour objectif l'entretien et
         le perfectionnement des connaissances. A l'issue de la formation, une attestation de présence sera délivrée au stagiaire.
         Le suivi de la formation ne donne pas lieu à délivrance de diplôme, certificat ou de tout autre document la sanctionnant.
-        Sa durée est fixée à <b>{{duree}}</b>.</p>
+        Sa durée est fixée à <b>2 jours en présentiel avec le formateur</b>.</p>
     <p>Le programme de l'action de formation, les noms et qualités du formateur figurent en annexe du présent contrat.
     </p>
     <h2>Article 3 : Niveau de connaissances préalables nécessaires</h2>
