--- a/dist-pdf/markdownForPdf/le-bilan-et-la-reeducation-vocale-le-timbre-en-question/contrat-formation-dpc.html
+++ b/dist-pdf/markdownForPdf/le-bilan-et-la-reeducation-vocale-le-timbre-en-question/contrat-formation-dpc.html
@@ -19,8 +19,8 @@
     <p>3 allée du stade 22680 Etables/Mer</p>
     <p>Numéro de Déclaration d’activité enregistrée sous le n° 53 22 08381 22</p>
     <p>auprès de la Préfecture de la région Bretagne</p>
-    {{#isHorsDPC}}<p>Code Naf : 9499Z </p>{{/isHorsDPC}}
-    {{#isDPC}}<p> ODPC habilité à dispenser des programmes de DPC </p>{{/isDPC}}
+    
+    <p> ODPC habilité à dispenser des programmes de DPC </p>
     <h1>Contrat de Formation Professionnelle</h1>
     <p>Entre les soussignés :</p>
     <p>L'organisme de formation : A PROPOS</p>
@@ -31,14 +31,14 @@
     <p>L’action de formation se définit comme une ou plusieurs journées consécutives de formation. Les durées et dates de l’action
         de formation sont précisées respectivement aux articles 2 et 4 du présent contrat.</p>
     <h2>Article 1 : Objet</h2>
-    <p>En exécution du présent contrat, l'organisme de formation s'engage à organiser l'action de formation intitulée: <b>{{formation}}</b></p>
+    <p>En exécution du présent contrat, l'organisme de formation s'engage à organiser l'action de formation intitulée: <b>Le bilan et la rééducation vocale - le timbre en question - Niveau 1</b></p>
     <h2>Article 2 : Nature et caractéristique des actions de formation</h2>
     <p>L'action de formation entre dans la catégorie des actions de formation prévues par l'article L.6313-­‐1 du Code du travail
         : Action d’acquisition, d’entretien ou de perfectionnement des connaissances.</p>
     <p>Elle a pour objectif l'entretien et le perfectionnement des connaissances.</p>
     <p>A l'issue de la formation, une attestation de présence sera délivrée au stagiaire.</p>
     <p>Le suivi de la formation ne donne pas lieu à délivrance de diplôme, certificat ou de tout autre document la sanctionnant.</p>
-    <p>Sa durée est fixée à <b>{{duree}}</b>.</p>
+    <p>Sa durée est fixée à <b>2 jours en présentiel avec le formateur</b>.</p>
     <p>Le programme de l'action de formation, les noms et qualités du formateur figurent en annexe du présent contrat.</p>
     <h2>Article 3 : Niveau de connaissances préalables nécessaires</h2>
     <p>Afin de suivre au mieux l'action de formation susvisée et obtenir la ou les qualification(s) auxquelles elle prépare,
@@ -51,15 +51,14 @@
     <p>Lieu : Auberge de jeunesse 5 rue de Kerbriant 29000 Brest</p>
     <p>L’action de formation est organisée pour un effectif de 20 stagiaires.</p>
     <p>Les moyens pédagogiques, techniques et d’encadrement mis en œuvre sont détaillés en annexe du présent contrat.</p>
-    <p>{{#isDPC}} Le suivi de la formation sera évalué par un questionnaire de fin de formation à renseigner sur le site de l’OGDPC.
-        {{/isDPC}}
+    <p> Le suivi de la formation sera évalué par un questionnaire de fin de formation à renseigner sur le site de l’OGDPC.
     </p>
     <h2>Article 5 : Délai de rétractation</h2>
     <p>A compter de la date de signature du présent contrat, le stagiaire a un délai de 10 jours pour se rétracter. Il en informe
         l'organisme de formation par lettre recommandée avec accusé de réception. Dans ce cas, aucune somme ne peut être
         exigée du stagiaire.</p>
     <h2>Article 6 : Dispositions financières</h2>
-    {{#isDPC}}<p> Le prix de l'action de formation est fixé à 432 €. Le montant de sa prise en charge est assuré par l'OGDPC.</p>
+    <p> Le prix de l'action de formation est fixé à 432 €. Le montant de sa prise en charge est assuré par l'OGDPC.</p>
     <p>Le stagiaire s’engage à joindre, pour faire face aux frais d’organisation et finaliser son inscription :</p>
     <ul>
         <li>
@@ -77,17 +76,8 @@
     <p>Dans le cas où il ne remplirait pas l'ensemble des conditions nécessaires au paiement par l'OGDPC à l'organisme formateur
         du montant correspondant à sa participation à ce parcours de DPC, le stagiaire s’engage à en régler lui-­‐même le
         montant de l’action de formation à l'organisme formateur, au prorata de sa participation, sous huit jours à réception
-        de la facture.</p>{{/isDPC}}  
-    {{#isHorsDPC}}<p>Le prix de l'action de formation est fixé à :</p>
-    <p>300 € pour les non-­‐adhérents « A Propos » ou 250€ pour les adhérents « A Propos » 2015, sur justificatif.</p>
-    <p>Règlement en 2 chèques à l’ordre d’A Propos :</p>
-    <ul>
-        <li>Un acompte d'un montant de 50 € (encaissé après le délai de rétraction de 10 jours à compter de la date de la signature
-            du présent contrat)</li>
-        <li>Le solde (encaissé après le 2ème jour de formation) de 250€ pour les non-­‐adhérents « A Propos » ou 200€ pour les
-            adhérents « A Propos » 2015. 
-        </li>
-    </ul>{{/isHorsDPC}}
+        de la facture.</p>  
+    
     <h2>Article 7 : Renonciation, Interruption et annulation de l’action de formation</h2>
     <p>En cas de renonciation du stagiaire dans les 15 jours précédant la date de réalisation de l’action de formation, sauf
         cas de force majeure dûment reconnue, les frais d’organisation seront acquis à l'organisme de formation à titre de
